Prevent fixed navbar overlap on favourites page

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -11,6 +11,7 @@ body {
   width: 80%;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 120px;
 
 }
 
